--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -19,5 +19,5 @@ jobs:
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
     - name: make test
       run: |
-        gcc t.c -pthread -c
-        valgrind ./all.out
+        gcc a/Payroll_test.cc
+        valgrind a/Payroll.o
