--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         sudo apt-get -y install valgrind
         sudo apt-get -y install libcunit1 libcunit1-doc libcunit1-dev 
-    - name: make test
+    - name: valgrind check
       run: |
         gcc t.c -pthread -c
-        valgrind all.out
+        valgrind ./all.out
